Implement floor 0 (not working yet).

--- a/README
+++ b/README
@@ -49,9 +49,7 @@ See the documentation in nogg.h for further details.
 
 Caveats
 -------
-Currently, libnogg has mostly the same limitations as version 0.99996 of
-the stb_vorbis implementation, namely:
+Currently, libnogg has the following limitations:
    - The library cannot decode multiple bitstreams from a single file.
    - Lossless deletion of samples from the front of the stream (negative
      initial sample position) is not supported.
-   - "Floor 0" (used by very old Vorbis files) is not supported.
