--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.4
+-----------
+
 Version 1.3 (2014/9/10)
 -----------
 - Fixed identifier shadowing warnings when building with old versions of
