--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 Version 1.4
 -----------
+- Fixed failure to decode streams containing single-symbol codebooks.
 
 Version 1.3 (2014/9/10)
 -----------
