--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ Version 1.4
   using the (buggy) reference decoder may not decode correctly with
   this library.
 - Fixed incorrect decoding of monaural streams using residue type 2.
+- Fixed low timing resolution in nogg-benchmark on Apple platforms.
 
 Version 1.3 (2014/9/10)
 -----------
