--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Version 1.4
+Version 1.4 (2015/1/3)
 -----------
 - BACKWARDS-INCOMPATIBLE CHANGE: The malloc() callback function now
   takes an additional parameter indicating the required address
