--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.5
+-----------
+
 Version 1.4 (2015/1/3)
 -----------
 - BACKWARDS-INCOMPATIBLE CHANGE: The malloc() callback function now
