--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
-Version 1.5
+Version 1.5 (2015/1/12)
 -----------
+- Fixed duplicate "const" in variable declarations.
 
 Version 1.4 (2015/1/3)
 -----------
