--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ Version 1.6
   specification can no longer be decoded correctly, though no such
   streams are known to exist "in the wild".)
 - Fixed crash when decoding zero-length streams.
+- Removed declaration of nonexistent vorbis_set_options() function.
 
 Version 1.5 (2015/1/12)
 -----------
