--- a/README
+++ b/README
@@ -47,7 +47,7 @@ Using libnogg
 The file "tools/nogg-decode.c" demonstrates how libnogg can be used to
 decode audio data from an Ogg Vorbis stream.
 
-See the documentation in nogg.h for further details.
+See the documentation in include/nogg.h for further details.
 
 
 Performance
@@ -59,14 +59,14 @@ the reference decoder (libvorbis) is 1.0; thus, smaller values indicate
 better performance.
 
                                  |    Time (monaural decode)
-           Platform (CPU)        | libvorbis | Tremor | libnogg
+         Architecture (CPU)      | libvorbis | Tremor | libnogg
     -----------------------------+-----------+--------+---------
     x86_64 (Intel Core i7-4770S) |    1.000  |  1.206 |  0.546
     ARM 32-bit (TI OMAP4460)     |    1.000  |  0.700 |  0.608
     ARM 64-bit (Apple A7)        |    1.000  |  1.311 |  0.783
 
                                  |     Time (stereo decode)
-           Platform (CPU)        | libvorbis | Tremor | libnogg
+         Architecture (CPU)      | libvorbis | Tremor | libnogg
     -----------------------------+-----------+--------+---------
     x86_64 (Intel Core i7-4770S) |    1.000  |  1.061 |  0.540
     ARM 32-bit (TI OMAP4460)     |    1.000  |  0.777 |  0.629
