--- a/CHANGES
+++ b/CHANGES
@@ -4,13 +4,14 @@ Version 1.6
   specification, related to streams containing codebooks with only one
   used symbol.  Previously, the specification and reference decoder
   implementation differed in their handling of such codebooks; libnogg
-  followed the specification, and consequently failed to decode some
-  streams which the reference decoder was able to successfully decode.
-  The errata modifies the specification to conform to the behavior of
-  the reference decoder in such cases, and thus libnogg can now decode
-  such streams.  (Conversely, streams which conformed to the pre-errata
-  specification can no longer be decoded correctly, though no such
-  streams are known to exist "in the wild".)
+  followed the specification (after related fixes in version 1.4), and
+  consequently failed to decode some streams which the reference decoder
+  was able to successfully decode.  The errata modifies the
+  specification to conform to the behavior of the reference decoder in
+  such cases, and thus libnogg can now decode such streams.
+  (Conversely, streams which conformed to the pre-errata specification
+  can no longer be decoded correctly, though no such streams are known
+  to exist "in the wild".)
 - Fixed crash when decoding zero-length streams.
 - Removed declaration of nonexistent vorbis_set_options() function.
 
