--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.8
+-----------
+
 Version 1.7 (2015/2/28)
 -----------
 - Fixed a compilation error occurring when compiling the library for
