--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,6 @@
+Version 1.9
+-----------
+
 Version 1.8 (2015/12/24)
 -----------
 - Refactored code to address false-positive Coverity defects (no change
