Channel count and sampling rate can never be zero for a successfully created Vorbis handle, so don't document that the associated functions can return zero.

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 Version 1.9
 -----------
+- Fixed inaccurate vorbis_channels() and vorbis_rate() documentation to
+  reflect that the functions always return positive values.
 
 Version 1.8 (2015/12/24)
 -----------
