--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 Version 1.9
 -----------
+- Added vorbis_bitrate().
 - Changed vorbis_rate() to return an unsigned value, to match the Vorbis
   specification.
 - Fixed inaccurate vorbis_channels() and vorbis_rate() documentation to
