--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Version 1.9
+Version 1.9 (2016/03/29)
 -----------
 - Added vorbis_bitrate().
 - Changed vorbis_rate() to return an unsigned value, to match the Vorbis
