Fix failure to detect as invalid a type 1 floor curve containing two points with the same X value (leading to division by zero in decoding).

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,7 @@
 Version 1.11
 ------------
+- Fixed several cases discovered by the afl-fuzz tool in which malformed
+  input could cause crashes or memory corruption.
 
 Version 1.10 (2017/06/03)
 ------------
