--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,4 @@
-Version 1.11
+Version 1.11 (2017/11/17)
 ------------
 - Fixed several cases discovered by the afl-fuzz tool in which malformed
   input could cause crashes or memory corruption.
