Remove reference to Bitbucket, which is dropping Mercurial support.

--- a/README
+++ b/README
@@ -85,5 +85,4 @@ of the stream (negative initial sample position).
 
 Reporting bugs
 --------------
-Please send any bug reports or suggestions directly to the author, or
-report them at: <https://bitbucket.org/achurch_/libnogg/issues>
+Please send any bug reports or suggestions directly to the author.
