--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Version 1.13 (2019/8/21)
+------------
+- No functional changes.
+- Removed reference to Bitbucket in documentation, since Bitbucket is
+  dropping Mercurial support.
+
 Version 1.12 (2019/3/1)
 ------------
 - Improved seek performance.
