Use the new INVALID_OPERATION error code instead of INVALID_ARGUMENT when trying to read float data from a READ_INT16_ONLY decoder.

--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@ Version 1.14
 ------------
 - Added a packet-mode interface (vorbis_open_packet()) for decoding
   Vorbis streams not embedded in Ogg containers.
+- vorbis_read_float() now returns the new error code
+  VORBIS_ERROR_INVALID_OPERATION instead of INVALID_ARGUMENT when called
+  on a decoder created with the READ_INT16_ONLY option.
 
 Version 1.13 (2019/8/21)
 ------------
