Fix incorrect decoding when built with GCC 8.0+ using -ffast-math.
Recent versions of GCC are capable of detecting signed zero values in
SIMD vector constants, such as are used to flip sign bits in optimized
SSE2 code, resulting in incorrect decoding results from the x86 SIMD
decoding logic when compiling with the -ffast-math option (which implies
treating positive and negative zero as the same value).  Work around
that by forcing GCC to view the sign masks as integer values.

--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,8 @@ Version 1.14
 - vorbis_read_float() now returns the new error code
   VORBIS_ERROR_INVALID_OPERATION instead of INVALID_ARGUMENT when called
   on a decoder created with the READ_INT16_ONLY option.
+- Fixed decoding errors from SIMD-optimized code when building for x86
+  using recent versions of GCC and -ffast-math.
 
 Version 1.13 (2019/8/21)
 ------------
