--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,8 @@
+Version 1.15
+------------
+- Added build rules for the Microsoft Visual C compiler to the Makefile.
+  See the README file for limitations.
+
 Version 1.14 (2019/8/27)
 ------------
 - Added a packet-mode interface (vorbis_open_packet()) for decoding
