Add precomputed IMDCT, bit-reverse, and window weight lookup tables.
These give around a 5% increase in initialization speed at a cost of
120k of static data, and can also avoid rounding errors introduced by
low-precision sin()/cos() results (as with MSVC using /fp:fast).

--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,6 @@
 Version 1.15
 ------------
+- Added precomputed lookup tables to speed up initialization.
 - Added build rules for the Microsoft Visual C compiler to the Makefile.
   See the README file for limitations.
 
