--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Version 1.15
 ------------
 - Added precomputed lookup tables to speed up initialization.
+- Added an optimized implementation for x86 CPUs with the AVX2
+  instruction set, enabled via the ENABLE_ASM_X86_AVX2 build flag.
 - Added build rules for the Microsoft Visual C compiler to the Makefile.
   See the README file for limitations.
 - Fixed decoding errors from SIMD-optimized code when building for x86
