--- a/README
+++ b/README
@@ -99,16 +99,16 @@ better performance.
                              |    Time (monaural decode)
        Architecture (CPU)    | libvorbis | Tremor | libnogg
     -------------------------+-----------+--------+---------
-    x86_64 (AMD Ryzen 3700X) |    1.000  |  1.346 |  0.535
-    ARM 32-bit (TI OMAP4460) |    1.000  |  0.700 |  0.608
-    ARM 64-bit (Apple A7)    |    1.000  |  1.311 |  0.783
+    x86-64 (AMD Ryzen 3700X) |    1.00   |  1.19  |  0.44
+    ARM 32-bit (TI OMAP4460) |    1.00   |  0.70  |  0.61
+    ARM 64-bit (Apple A7)    |    1.00   |  1.31  |  0.78
 
                              |     Time (stereo decode)
        Architecture (CPU)    | libvorbis | Tremor | libnogg
     -------------------------+-----------+--------+---------
-    x86_64 (AMD Ryzen 3700X) |    1.000  |  1.157 |  0.474
-    ARM 32-bit (TI OMAP4460) |    1.000  |  0.777 |  0.629
-    ARM 64-bit (Apple A7)    |    1.000  |  1.164 |  0.609
+    x86-64 (AMD Ryzen 3700X) |    1.00   |  1.06  |  0.41
+    ARM 32-bit (TI OMAP4460) |    1.00   |  0.78  |  0.63
+    ARM 64-bit (Apple A7)    |    1.00   |  1.16  |  0.61
 
 
 Caveats
